--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
     "jquery": "^3.3.1",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "gulp",
